--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Первое задание</h1>
 	<p>Абсолютный путь</p>
-	<img src="C:/Users/Kir/Desktop/project/img/japan.jpg" alt="Япония">
+	<img src="/img/japan.jpg" alt="Япония">
 	<p>Относительный путь</p>
 	<img src="../../img/ocean.jpg" alt="океан">
 </body>
