--- a/service.html
+++ b/service.html
@@ -14,37 +14,34 @@
         <div class="header">
             <div class="container">
                 <div class="header__logo">
-                    <h1>Афродита</h1>
+                    <p class="header__logo-text">Афродита</p>
                 </div>
                 <div class="header__info">
                     <div class="header__phone">
                         <p>8 (800) 00-392-10</p>
                     </div>
                     <div class="header__schedule">
-                        <a href="#">График работы</a>
+                        График работы
                     </div>
                 </div>
             </div>
         </div>
-        <div class="sidebar">
+        <div class="container">
             <div class="sidebar__menu">
-                <ul>
+                <ul class="sidebar__menu-list">
                     <li class="sidebar__menu-item">
                         <a href="#" class="sidebar__menu-link">
-                    		<img src="" alt="" class="sidebar__menu-icon">
-                    	<span class="sidebar__menu-text">Главная</span>
+                    	 <span class="sidebar__menu-text">ГЛАВНАЯ</span>
                         </a>
                     </li>
                     <li class="sidebar__menu-item">
                         <a href="#" class="sidebar__menu-link">
-                    		<img src="" alt="" class="sidebar__menu-icon">
-                    	<span class="sidebar__menu-text">Услуги</span>
+                    	  <span class="sidebar__menu-text">УСЛУГИ</span>
                         </a>
                     </li>
                     <li class="sidebar__menu-item">
                         <a href="#" class="sidebar__menu-link">
-                    		<img src="" alt="" class="sidebar__menu-icon">
-                    	<span class="sidebar__menu-text">Отзывы</span>
+                          <span class="sidebar__menu-text">ОТЗЫВЫ</span>
                         </a>
                     </li>
                 </ul>
@@ -66,7 +63,7 @@
                     <ul class="services">
                         <li class="services__item">
                             <div class="services__photo">
-                                <img src="" class="services__photo-png">
+                                <img src="images/cycle.png" class="services__photo-png">
                             </div>
                             <div class="services-desc">
                                 <div class="services__name">
@@ -79,7 +76,7 @@
                         </li>
                         <li class="services__item">
                             <div class="services__photo">
-                                <img src="" class="services__photo-png">
+                                <img src="images/apple.png" class="services__photo-png">
                             </div>
                             <div class="services-desc">
                                 <div class="services__name">
@@ -92,7 +89,7 @@
                         </li>
                         <li class="services__item">
                             <div class="services__photo">
-                                <img src="" class="services__photo-png">
+                                <img src="images/yoga.png" class="services__photo-png">
                             </div>
                             <div class="services-desc">
                                 <div class="services__name">
@@ -105,7 +102,7 @@
                         </li>
                         <li class="services__item">
                             <div class="services__photo">
-                                <img src="" class="services__photo-png">
+                                <img src="images/tpx.png" class="services__photo-png">
                             </div>
                             <div class="services-desc">
                                 <div class="services__name">
@@ -118,7 +115,7 @@
                         </li>
                         <li class="services__item">
                             <div class="services__photo">
-                                <img src="" class="services__photo-png">
+                                <img src="images/crossfit.png" class="services__photo-png">
                             </div>
                             <div class="services-desc">
                                 <div class="services__name">
@@ -131,7 +128,7 @@
                         </li>
                         <li class="services__item">
                             <div class="services__photo">
-                                <img src="" class="services__photo-png">
+                                <img src="images/pool.png" class="services__photo-png">
                             </div>
                             <div class="services-desc">
                                 <div class="services__name">
@@ -142,6 +139,7 @@
                                 </div>
                             </div>
                         </li>
+                        
                     </ul>
                 </div>
             </div>
@@ -154,35 +152,35 @@
                     Автор работы
                 </div>
             </div>
-            <div class="footer__company">
+            <div class="footer__logo-text">
                 <h1>Афродита</h1>
             </div>
             <div class="socials">
-                <div class="socials__title">Наши социальный сети</div>
+                <div class="socials__title">Наши социальные сети</div>
                 <ul class="socials__list">
                     <li class="socials__item">
                         <a href="" class="socials__link">
-            				<img src="" alt="" class="socials__icon">
+            				<img src="images/icons/vk.png" alt="" class="socials__icon">
             			</a>
                     </li>
                     <li class="socials__item">
                         <a href="" class="socials__link">
-            				<img src="" alt="" class="socials__icon">
+            				<img src="images/icons/fb.png" alt="" class="socials__icon">
             			</a>
                     </li>
                     <li class="socials__item">
                         <a href="" class="socials__link">
-            				<img src="" alt="" class="socials__icon">
+            				<img src="images/icons/google.png" alt="" class="socials__icon">
             			</a>
                     </li>
                     <li class="socials__item">
                         <a href="" class="socials__link">
-            				<img src="" alt="" class="socials__icon">
+            				<img src="images/icons/twitter.png" alt="" class="socials__icon">
             			</a>
                     </li>
                     <li class="socials__item">
                         <a href="" class="socials__link">
-            				<img src="" alt="" class="socials__icon">
+            				<img src="images/icons/mail.png" alt="" class="socials__icon">
             			</a>
                     </li>
                 </ul>
