--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 </head>
 
 <body>
-    <div class="intro-bg">
-        <div class="intro-logo">
-            <img src="images/logo.png" alt="лого" class="intro-logo__pic">
-        </div>
-        <div class="intro-button">
-            <div class="button-main">
-                <a href="about.html" class="button-main__link">
-        			<span class="button-main__text">Перейти на сайт
-        			</span>
-        		</a>
+    <div>
+        <div class="intro-bg">
+            <div class="intro-logo">
+                <img src="images/logo.png" alt="лого" class="intro-logo__pic">
+            </div>
+            <div class="intro-button">
+                <a href="about.html" class="intro-button__link">
+                         Перейти на сайт
+                </a>
             </div>
         </div>
     </div>
