--- a/service.html
+++ b/service.html
@@ -14,11 +14,13 @@
         <div class="header">
             <div class="container">
                 <div class="header__logo">
-                    <p class="header__logo-text">Афродита</p>
+                    <a href="about.html" class="header__logo-text">Афродита
+                     </a>
                 </div>
                 <div class="header__info">
                     <div class="header__phone">
-                        <p>8 (800) 00-392-10</p>
+                        <a href="tel:88000039210">8 (800) 00-392-10
+                        </a>
                     </div>
                     <div class="header__schedule">
                         График работы
@@ -31,17 +33,17 @@
                 <ul class="sidebar__menu-list">
                     <li class="sidebar__menu-item">
                         <a href="#" class="sidebar__menu-link">
-                    	 <span class="sidebar__menu-text">ГЛАВНАЯ</span>
+                         <span class="sidebar__menu-text">Главная</span>
                         </a>
                     </li>
                     <li class="sidebar__menu-item">
                         <a href="#" class="sidebar__menu-link">
-                    	  <span class="sidebar__menu-text">УСЛУГИ</span>
+                          <span class="sidebar__menu-text">Услуги</span>
                         </a>
                     </li>
                     <li class="sidebar__menu-item">
                         <a href="#" class="sidebar__menu-link">
-                          <span class="sidebar__menu-text">ОТЗЫВЫ</span>
+                          <span class="sidebar__menu-text">Отзывы</span>
                         </a>
                     </li>
                 </ul>
@@ -139,7 +141,6 @@
                                 </div>
                             </div>
                         </li>
-                        
                     </ul>
                 </div>
             </div>
@@ -160,28 +161,28 @@
                 <ul class="socials__list">
                     <li class="socials__item">
                         <a href="" class="socials__link">
-            				<img src="images/icons/vk.png" alt="" class="socials__icon">
-            			</a>
+                            <img src="images/icons/vk.png" alt="" class="socials__icon">
+                        </a>
                     </li>
                     <li class="socials__item">
                         <a href="" class="socials__link">
-            				<img src="images/icons/fb.png" alt="" class="socials__icon">
-            			</a>
+                            <img src="images/icons/fb.png" alt="" class="socials__icon">
+                        </a>
                     </li>
                     <li class="socials__item">
                         <a href="" class="socials__link">
-            				<img src="images/icons/google.png" alt="" class="socials__icon">
-            			</a>
+                            <img src="images/icons/google.png" alt="" class="socials__icon">
+                        </a>
                     </li>
                     <li class="socials__item">
                         <a href="" class="socials__link">
-            				<img src="images/icons/twitter.png" alt="" class="socials__icon">
-            			</a>
+                            <img src="images/icons/twitter.png" alt="" class="socials__icon">
+                        </a>
                     </li>
                     <li class="socials__item">
                         <a href="" class="socials__link">
-            				<img src="images/icons/mail.png" alt="" class="socials__icon">
-            			</a>
+                            <img src="images/icons/mail.png" alt="" class="socials__icon">
+                        </a>
                     </li>
                 </ul>
             </div>
