--- a/service.html
+++ b/service.html
@@ -12,14 +12,15 @@
 <body>
     <div class="wrapper">
         <div class="header">
-            <div class="container">
+            <div class="container clearfix">
                 <div class="header__logo">
                     <a href="about.html" class="header__logo-text">Афродита
                      </a>
                 </div>
                 <div class="header__info">
                     <div class="header__phone">
-                        <a href="tel:88000039210">8 (800) 00-392-10
+                        <a href="tel:88000039210" class="header__phone-num">
+                            8 (800) 00-392-10
                         </a>
                     </div>
                     <div class="header__schedule">
@@ -28,29 +29,8 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="sidebar__menu">
-                <ul class="sidebar__menu-list">
-                    <li class="sidebar__menu-item">
-                        <a href="#" class="sidebar__menu-link">
-                         <span class="sidebar__menu-text">Главная</span>
-                        </a>
-                    </li>
-                    <li class="sidebar__menu-item">
-                        <a href="#" class="sidebar__menu-link">
-                          <span class="sidebar__menu-text">Услуги</span>
-                        </a>
-                    </li>
-                    <li class="sidebar__menu-item">
-                        <a href="#" class="sidebar__menu-link">
-                          <span class="sidebar__menu-text">Отзывы</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
         <div class="main-content">
-            <div class="container">
+            <div class="container clearfix">
                 <div class="main-section">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item">
@@ -58,10 +38,10 @@
                         </li>
                         </li>
                         <li class="breadcrumbs__item">
-                            <a href="" class="breadcrumbs__link">Услуги</a>
+                            <a href="" class="breadcrumbs__link breadcrumbs__link_active">Услуги</a>
                         </li>
                     </ul>
-                    <h1>Услуги</h1>
+                    <h1 class="title">Услуги</h1>
                     <ul class="services">
                         <li class="services__item">
                             <div class="services__photo">
@@ -143,48 +123,75 @@
                         </li>
                     </ul>
                 </div>
+                <div class="sidebar__menu">
+                    <ul class="sidebar__menu-list">
+                        <li class="sidebar__menu-item">
+                            <a href="#" class="sidebar__menu-link">
+                                <div class="sidebar__icon sidebar__icon_bolt">
+                                </div>
+                                <span class="sidebar__menu-text">Главная</span>
+                            </a>
+                        </li>
+                        <li class="sidebar__menu-item">
+                            <a href="#" class="sidebar__menu-link">
+                                <div class="sidebar__icon sidebar__icon_dumbbel">
+                                </div>
+                                <span class="sidebar__menu-text">Услуги</span>
+                            </a>
+                        </li>
+                        <li class="sidebar__menu-item">
+                            <a href="#" class="sidebar__menu-link">
+                                <div class="sidebar__icon sidebar__icon_star">
+                                </div>
+                                <span class="sidebar__menu-text">Отзывы</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="footer">
-            <div class="footer__info">
-                <div class="footer__info-text">
-                    <p>Сделано с любовью и старанием</p>
-                    <p>на курсе "HTML + CSS" в <a href="#">Loftschool</a></p>
-                    Автор работы
+            <div class="container">
+                <div class="footer__info">
+                    <div class="footer__info-text">
+                        <p>Сделано с любовью и старанием</p>
+                        <p>на курсе "HTML + CSS" в <a href="#">Loftschool</a></p>
+                        Автор работы
+                    </div>
                 </div>
-            </div>
-            <div class="footer__logo-text">
-                <h1>Афродита</h1>
-            </div>
-            <div class="socials">
-                <div class="socials__title">Наши социальные сети</div>
-                <ul class="socials__list">
-                    <li class="socials__item">
-                        <a href="" class="socials__link">
+                <div class="footer__logo-text">
+                    <h1>Афродита</h1>
+                </div>
+                <div class="socials">
+                    <div class="socials__title">Наши социальные сети</div>
+                    <ul class="socials__list">
+                        <li class="socials__item">
+                            <a href="" class="socials__link">
                             <img src="images/icons/vk.png" alt="" class="socials__icon">
                         </a>
-                    </li>
-                    <li class="socials__item">
-                        <a href="" class="socials__link">
+                        </li>
+                        <li class="socials__item">
+                            <a href="" class="socials__link">
                             <img src="images/icons/fb.png" alt="" class="socials__icon">
                         </a>
-                    </li>
-                    <li class="socials__item">
-                        <a href="" class="socials__link">
+                        </li>
+                        <li class="socials__item">
+                            <a href="" class="socials__link">
                             <img src="images/icons/google.png" alt="" class="socials__icon">
                         </a>
-                    </li>
-                    <li class="socials__item">
-                        <a href="" class="socials__link">
+                        </li>
+                        <li class="socials__item">
+                            <a href="" class="socials__link">
                             <img src="images/icons/twitter.png" alt="" class="socials__icon">
                         </a>
-                    </li>
-                    <li class="socials__item">
-                        <a href="" class="socials__link">
+                        </li>
+                        <li class="socials__item">
+                            <a href="" class="socials__link">
                             <img src="images/icons/mail.png" alt="" class="socials__icon">
                         </a>
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
