--- a/about.html
+++ b/about.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
+
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-	<title>О Компании</title>
+    <title>О Компании</title>
 </head>
+
 <body>
-	 <div class="wrapper">
-        <div class="header">
+    <div class="wrapper">
+        <header class="header">
             <div class="container clearfix">
                 <div class="header__logo">
                     <a href="about.html" class="header__logo-text">Афродита
@@ -26,91 +29,146 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </header>
         <div class="main-content">
             <div class="container clearfix">
-                <div class="main-section">
-                    <ul class="breadcrumbs">
-                        <li class="breadcrumbs__item">
-                            <a href="" class="breadcrumbs__link">Главная</a>
-                        </li>
-                        </li>
-                        <li class="breadcrumbs__item">
-                            <a href="" class="breadcrumbs__link breadcrumbs__link_active">Услуги</a>
-                        </li>
-                    </ul>
-                    
-                <div class="sidebar__menu">
+                <div class="content">
+                    <div class="content-image"></div>
+                    <span class="content-text">о компании</span>
+                    <main class="description-company">
+                        <div class="description-company__text">
+                            <p>
+                                <span class="bold-text">Фитнес-центр «Афродита»</span> приглашает вас оздоровиться и провести приятно время с друзьями или знакомыми, занимаясь вместе спортом. Квалифицированные тренеры найдут индивидуальный подход к каждому, помогут достигнуть поставленных целей и определят оптимальную нагрузку.
+                            </p>
+                            <br>
+                            <p>
+                                Нашим главным отличием мы считаем огромный
+                                <span class="bold-text">50 метровый бассейн</span>, состоящий из 6 дорожек. Помимо бассейна в зоне отдыха установлены финские сауны и турецкий хамам. Это прекрасный вариант для восстановления после тяжелой тренировки.
+                            </p>
+                            <br>
+                            <p>
+                                На первом этаже в фитобаре вы сможете заказать травяные чаи, белковые коктейли, минеральную воду и протеиновые батончики. Также здесь есть детская комната с воспитателями и нянями, которые присмотрят за вашими детьми в течение тренировки.
+                            </p>
+                            <br>
+                            <p>
+                                Наши цены на 100% оправданы высоким качеством сервиса. Если вы хотите выгодно приобрести абонемент, обращайтесь к администраторам, которые подскажут оптимальные программы конкретно под ваши потребности.
+                                <span class="bold-text">Нашими ключевыми направлениями остаются:</span>
+                            </p>
+                            <ul>
+                                <li>йога</li>
+                                <li>фитнес</li>
+                                <li>занятия в бассейне</li>
+                                <li>кроссфит</li>
+                                <li>ТРХ петли</li>
+                            </ul>
+                            <div class="description-company__text_border">
+                                <div class="border-text">
+                                 Помимо перечисленных услуг, мы предоставляем консультации профессиональных диетологов, тренеров, психологов. Также есть кабинет массажа, зал спа рядом с бассейном и возможность арендовать центр для проведения массовых мероприятий.
+                                  <span class="bold-text"> Ждем ваших заявок!</span>
+                                </div>
+                            </div>
+                        </div>
+                        <h2 class="title__partners">Партнёры</h2>
+                        <div class="partners">
+                            <ul>
+                                <li class="partners__item">
+                                    <img src="images/flamingo.png" class="partners__img">
+                                </li>
+                                <li class="partners__item">
+                                    <img src="images/malibu.png" class="partners__img">
+                                </li>
+                                <li class="partners__item">
+                                    <img src="images/lion.png" class="partners__img">
+                                </li>
+                                <li class="partners__item">
+                                    <img src="images/arni.png" class="partners__img">
+                                </li>
+                                <li class="partners__item">
+                                    <img src="images/grif.png" class="partners__img">
+                                </li>
+                                <li class="partners__item">
+                                    <img src="images/atletica.png" class="partners__img">
+                                </li>
+                            </ul>
+                        </div>
+                    </main>
+                </div>
+                <nav class="sidebar__menu">
                     <ul class="sidebar__menu-list">
                         <li class="sidebar__menu-item">
-                            <a href="#" class="sidebar__menu-link">
-                                <div class="sidebar__icon sidebar__icon_bolt">
+                            <a href="about.html" class="sidebar__menu-link">
+                                <div class="sidebar__icon sidebar__icon-bolt_black">
                                 </div>
-                                <span class="sidebar__menu-text">Главная</span>
+                                <span class="sidebar__menu-text sidebar__menu-text_balck">Главная
+                                </span>
                             </a>
                         </li>
                         <li class="sidebar__menu-item">
-                            <a href="#" class="sidebar__menu-link">
-                                <div class="sidebar__icon sidebar__icon_dumbbel">
+                            <a href="service.html" class="sidebar__menu-link">
+                                <div class="sidebar__icon sidebar__icon_dumbbel_light">
                                 </div>
-                                <span class="sidebar__menu-text">Услуги</span>
+                                <span class="sidebar__menu-text ">Услуги</span>
                             </a>
                         </li>
                         <li class="sidebar__menu-item">
-                            <a href="#" class="sidebar__menu-link">
+                            <a href="comments.html" class="sidebar__menu-link">
                                 <div class="sidebar__icon sidebar__icon_star">
                                 </div>
                                 <span class="sidebar__menu-text">Отзывы</span>
                             </a>
                         </li>
                     </ul>
-                </div>
+                </nav>
             </div>
         </div>
-        <div class="footer">
-            <div class="container">
-                <div class="footer__info">
-                    <div class="footer__info-text">
-                        <p>Сделано с любовью и старанием</p>
-                        <p>на курсе "HTML + CSS" в <a href="#">Loftschool</a></p>
-                        Автор работы
-                    </div>
+    </div>
+    <footer class="footer">
+        <div class="container clearfix">
+            <div class="footer__info">
+                <p>Сделано с любовью и старанием</p>
+                <p>на курсе "HTML + CSS" в <a href="#" class="footer__info-link">Loftschool</a></p>
+                <p>Автор работы</p>
+            </div>
+            <div class="footer__logo">
+                <a href="about.html" class="footer__logo-text">Афродита
+                     </a>
+            </div>
+            <div class="socials">
+                <div class="socials__title">
+                    <span class="socials__title-text">Наши социальные сети</span>
                 </div>
-                <div class="footer__logo-text">
-                    <h1>Афродита</h1>
-                </div>
-                <div class="socials">
-                    <div class="socials__title">Наши социальные сети</div>
+                <div class="socials__icons">
                     <ul class="socials__list">
                         <li class="socials__item">
                             <a href="" class="socials__link">
                             <img src="images/icons/vk.png" alt="" class="socials__icon">
-                        </a>
+                               </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
                             <img src="images/icons/fb.png" alt="" class="socials__icon">
-                        </a>
+                                </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
                             <img src="images/icons/google.png" alt="" class="socials__icon">
-                        </a>
+                               </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
                             <img src="images/icons/twitter.png" alt="" class="socials__icon">
-                        </a>
+                               </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
                             <img src="images/icons/mail.png" alt="" class="socials__icon">
-                        </a>
+                               </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
+
 </html>
