--- a/service.html
+++ b/service.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <title>Услуги</title>
 </head>
 
 <body>
     <div class="wrapper">
-        <div class="header">
+        <header class="header">
             <div class="container clearfix">
                 <div class="header__logo">
                     <a href="about.html" class="header__logo-text">Афродита
@@ -28,10 +29,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </header>
         <div class="main-content">
             <div class="container clearfix">
-                <div class="main-section">
+                <main class="main-section">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item">
                             <a href="" class="breadcrumbs__link">Главная</a>
@@ -122,79 +123,83 @@
                             </div>
                         </li>
                     </ul>
-                </div>
-                <div class="sidebar__menu">
+                </main>
+                <nav class="sidebar__menu">
                     <ul class="sidebar__menu-list">
                         <li class="sidebar__menu-item">
-                            <a href="#" class="sidebar__menu-link">
+                            <a href="about.html" class="sidebar__menu-link">
                                 <div class="sidebar__icon sidebar__icon_bolt">
                                 </div>
                                 <span class="sidebar__menu-text">Главная</span>
                             </a>
                         </li>
                         <li class="sidebar__menu-item">
-                            <a href="#" class="sidebar__menu-link">
+                            <a href="service.html" class="sidebar__menu-link">
                                 <div class="sidebar__icon sidebar__icon_dumbbel">
                                 </div>
-                                <span class="sidebar__menu-text">Услуги</span>
+                                <span class="sidebar__menu-text sidebar__menu-text_balck">Услуги</span>
                             </a>
                         </li>
                         <li class="sidebar__menu-item">
-                            <a href="#" class="sidebar__menu-link">
+                            <a href="comments.html" class="sidebar__menu-link">
                                 <div class="sidebar__icon sidebar__icon_star">
                                 </div>
                                 <span class="sidebar__menu-text">Отзывы</span>
                             </a>
                         </li>
                     </ul>
-                </div>
-            </div>
-        </div>
-        <div class="footer">
-            <div class="container">
-                <div class="footer__info">
-                    <div class="footer__info-text">
-                        <p>Сделано с любовью и старанием</p>
-                        <p>на курсе "HTML + CSS" в <a href="#">Loftschool</a></p>
-                        Автор работы
-                    </div>
-                </div>
-                <div class="footer__logo-text">
-                    <h1>Афродита</h1>
-                </div>
-                <div class="socials">
-                    <div class="socials__title">Наши социальные сети</div>
-                    <ul class="socials__list">
-                        <li class="socials__item">
-                            <a href="" class="socials__link">
-                            <img src="images/icons/vk.png" alt="" class="socials__icon">
-                        </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="" class="socials__link">
-                            <img src="images/icons/fb.png" alt="" class="socials__icon">
-                        </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="" class="socials__link">
-                            <img src="images/icons/google.png" alt="" class="socials__icon">
-                        </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="" class="socials__link">
-                            <img src="images/icons/twitter.png" alt="" class="socials__icon">
-                        </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="" class="socials__link">
-                            <img src="images/icons/mail.png" alt="" class="socials__icon">
-                        </a>
-                        </li>
-                    </ul>
-                </div>
+                </nav>
             </div>
         </div>
     </div>
+        <footer class="footer">
+            <div class="container clearfix">
+                <div class="footer__info">
+                    <p>Сделано с любовью и старанием</p>
+                    <p>на курсе "HTML + CSS" в <a href="#" class="footer__info-link">Loftschool</a></p>
+                    <p>Автор работы</p>
+                </div>
+                <div class="footer__logo">
+                    <a href="about.html" class="footer__logo-text">Афродита
+                     </a>
+                </div>
+                <div class="socials">
+                    <div class="socials__title">
+                        <span class="socials__title-text">Наши социальные сети</span>
+                    </div>
+                    <div class="socials__icons">
+                        <ul class="socials__list">
+                            <li class="socials__item">
+                                <a href="" class="socials__link">
+                            <img src="images/icons/vk.png" alt="" class="socials__icon">
+                               </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="" class="socials__link">
+                            <img src="images/icons/fb.png" alt="" class="socials__icon">
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="" class="socials__link">
+                            <img src="images/icons/google.png" alt="" class="socials__icon">
+                               </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="" class="socials__link">
+                            <img src="images/icons/twitter.png" alt="" class="socials__icon">
+                               </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="" class="socials__link">
+                            <img src="images/icons/mail.png" alt="" class="socials__icon">
+                               </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    
 </body>
 
 </html>
