--- a/service.html
+++ b/service.html
@@ -35,11 +35,13 @@
                 <main class="main-section">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item">
-                            <a href="" class="breadcrumbs__link">Главная</a>
+                            <a href="about.html" class="breadcrumbs__link">Главная
+                            </a>
                         </li>
                         </li>
                         <li class="breadcrumbs__item">
-                            <a href="" class="breadcrumbs__link breadcrumbs__link_active">Услуги</a>
+                            <span class="breadcrumbs__link breadcrumbs__link_active">Услуги
+                           </span>
                         </li>
                     </ul>
                     <h1 class="title">Услуги</h1>
@@ -152,54 +154,53 @@
             </div>
         </div>
     </div>
-        <footer class="footer">
-            <div class="container clearfix">
-                <div class="footer__info">
-                    <p>Сделано с любовью и старанием</p>
-                    <p>на курсе "HTML + CSS" в <a href="#" class="footer__info-link">Loftschool</a></p>
-                    <p>Автор работы</p>
-                </div>
-                <div class="footer__logo">
-                    <a href="about.html" class="footer__logo-text">Афродита
+    <footer class="footer">
+        <div class="container clearfix">
+            <div class="footer__info">
+                <p>Сделано с любовью и старанием</p>
+                <p>на курсе "HTML + CSS" в <a href="#" class="footer__info-link">Loftschool</a></p>
+                <p>Автор работы</p>
+            </div>
+            <div class="footer__logo">
+                <a href="about.html" class="footer__logo-text">Афродита
                      </a>
+            </div>
+            <div class="socials">
+                <div class="socials__title">
+                    <span class="socials__title-text">Наши социальные сети</span>
                 </div>
-                <div class="socials">
-                    <div class="socials__title">
-                        <span class="socials__title-text">Наши социальные сети</span>
-                    </div>
-                    <div class="socials__icons">
-                        <ul class="socials__list">
-                            <li class="socials__item">
-                                <a href="" class="socials__link">
+                <div class="socials__icons">
+                    <ul class="socials__list">
+                        <li class="socials__item">
+                            <a href="" class="socials__link">
                             <img src="images/icons/vk.png" alt="" class="socials__icon">
                                </a>
-                            </li>
-                            <li class="socials__item">
-                                <a href="" class="socials__link">
+                        </li>
+                        <li class="socials__item">
+                            <a href="" class="socials__link">
                             <img src="images/icons/fb.png" alt="" class="socials__icon">
                                 </a>
-                            </li>
-                            <li class="socials__item">
-                                <a href="" class="socials__link">
+                        </li>
+                        <li class="socials__item">
+                            <a href="" class="socials__link">
                             <img src="images/icons/google.png" alt="" class="socials__icon">
                                </a>
-                            </li>
-                            <li class="socials__item">
-                                <a href="" class="socials__link">
+                        </li>
+                        <li class="socials__item">
+                            <a href="" class="socials__link">
                             <img src="images/icons/twitter.png" alt="" class="socials__icon">
                                </a>
-                            </li>
-                            <li class="socials__item">
-                                <a href="" class="socials__link">
+                        </li>
+                        <li class="socials__item">
+                            <a href="" class="socials__link">
                             <img src="images/icons/mail.png" alt="" class="socials__icon">
                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </footer>
-    
+        </div>
+    </footer>
 </body>
 
 </html>
