--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                     <a href="about.html" class="header__logo-text">Афродита
                      </a>
                 </div>
-                <div class="header__info">
+                <adress class="header__info">
                     <div class="header__phone">
                         <a href="tel:88000039210" class="header__phone-num">
                             8 (800) 00-392-10
@@ -35,10 +35,10 @@
                         обед: 14:00-14:30
                         </span>
                     </div>
-                </div>
+                </adress>
             </div>
         </header>
-        <div class="main-content">
+        <main class="main-content">
             <div class="container clearfix">
                 <div class="content">
                     <div class="content-image"></div>
@@ -134,7 +134,7 @@
                     </ul>
                 </nav>
             </div>
-        </div>
+        </main>
     </div>
     <footer class="footer">
         <div class="container clearfix">
