--- a/service.html
+++ b/service.html
@@ -18,21 +18,29 @@
                     <a href="about.html" class="header__logo-text">Афродита
                      </a>
                 </div>
-                <div class="header__info">
+                <adress class="header__info">
                     <div class="header__phone">
                         <a href="tel:88000039210" class="header__phone-num">
                             8 (800) 00-392-10
                         </a>
                     </div>
-                    <div class="header__schedule">
+                    <button class="header__schedule">
                         График работы
+                    </button>
+                    <div class="schedule">
+                        <span class="schedule__time">
+                        пн-вс: 09:00-20:00
+                        </span>
+                        <span class="schedule__lunch">
+                        обед: 14:00-14:30
+                        </span>
                     </div>
-                </div>
+                </adress>
             </div>
         </header>
-        <div class="main-content">
+        <main class="main-content">
             <div class="container clearfix">
-                <main class="main-section">
+                <div class="main-section">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item">
                             <a href="about.html" class="breadcrumbs__link">Главная
@@ -125,7 +133,7 @@
                             </div>
                         </li>
                     </ul>
-                </main>
+                </div>
                 <nav class="sidebar__menu">
                     <ul class="sidebar__menu-list">
                         <li class="sidebar__menu-item">
@@ -152,7 +160,7 @@
                     </ul>
                 </nav>
             </div>
-        </div>
+        </main>
     </div>
     <footer class="footer">
         <div class="container clearfix">
