--- a/service.html
+++ b/service.html
@@ -24,16 +24,18 @@
                             8 (800) 00-392-10
                         </a>
                     </div>
-                    <button class="header__schedule">
-                        График работы
-                    </button>
-                    <div class="schedule">
-                        <span class="schedule__time">
+                    <div class="dropdown">
+                        <button class="header__schedule">
+                            График работы
+                        </button>
+                        <div class="schedule">
+                            <span class="schedule__time">
                         пн-вс: 09:00-20:00
                         </span>
-                        <span class="schedule__lunch">
+                            <span class="schedule__lunch">
                         обед: 14:00-14:30
                         </span>
+                        </div>
                     </div>
                 </adress>
             </div>
