--- a/comments.html
+++ b/comments.html
@@ -92,8 +92,8 @@
                                 </div>
                             </li>
                             <li class="comments__item clearfix">
-                                <div class="comments__avatar">
-                                    <img src="images/afrofita.png">
+                                <div class="comments__avatar ">
+                                    <img src="images/afrofita.png" class="comments__avatar-afrodita" >
                                 </div>
                                 <div class="comments__text">
                                     <p class="comments__date">
@@ -199,11 +199,11 @@
                                             <div class="form__radios-container">
                                                 <div class="form__radio">
                                                     <input type="radio" class="form__radio-elem" checked>
-                                                    <label for="form__radio-name">Да</label>
+                                                    <label for="form__radio-elem" class="form__radio-name">Да</label>
                                                 </div>
                                                 <div class="form__radio">
                                                     <input type="radio" class="form__radio-elem">
-                                                    <label for="form__radio-name">Нет</label>
+                                                    <label for="form__radio-elem" class="form__radio-name">Нет</label>
                                                 </div>
                                             </div>
                                         </div>
