--- a/comments.html
+++ b/comments.html
@@ -198,12 +198,12 @@
                                             <div class="form__radios-title">Отображать фото в отзыве?</div>
                                             <div class="form__radios-container">
                                                 <div class="form__radio">
-                                                    <input type="radio" class="form__radio-elem" checked>
-                                                    <label for="form__radio-elem" class="form__radio-name">Да</label>
+                                                    <input type="radio" class="form__radio-elem"  name="review" checked>
+                                                    <label  class="form__radio-name">Да</label>
                                                 </div>
                                                 <div class="form__radio">
-                                                    <input type="radio" class="form__radio-elem">
-                                                    <label for="form__radio-elem" class="form__radio-name">Нет</label>
+                                                    <input type="radio" class="form__radio-elem" name="review" >
+                                                    <label  class="form__radio-name">Нет</label>
                                                 </div>
                                             </div>
                                         </div>
