--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 <body>
     <div>
         <div class="intro-bg">
-            <div class="intro-logo">
-                <img src="images/logo.png" alt="лого" class="intro-logo__pic">
-            </div>
-            <div class="intro-button">
-                <a href="about.html" class="intro-button__link">
+            <div class="intro-container">
+                <div class="intro-logo">
+                    <img src="images/logo.png" alt="лого" class="intro-logo__pic">
+                </div>
+                <div class="intro-button">
+                    <a href="about.html" class="intro-button__link">
                          Перейти на сайт
                 </a>
+                </div>
             </div>
         </div>
     </div>
