--- a/about.html
+++ b/about.html
@@ -109,12 +109,12 @@
                 <nav class="sidebar__menu">
                     <ul class="sidebar__menu-list">
                         <li class="sidebar__menu-item">
-                            <a href="about.html" class="sidebar__menu-link">
+                            <span class="sidebar__menu-link">
                                 <div class="sidebar__icon sidebar__icon-bolt_black">
                                 </div>
                                 <span class="sidebar__menu-text sidebar__menu-text_balck">Главная
                                 </span>
-                            </a>
+                            </span>
                         </li>
                         <li class="sidebar__menu-item">
                             <a href="service.html" class="sidebar__menu-link">
@@ -154,27 +154,27 @@
                     <ul class="socials__list">
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/vk.png" alt="" class="socials__icon">
+                            <img src="images/icons/vk.png" alt="" class="socials__icon-vk">
                                </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/fb.png" alt="" class="socials__icon">
+                            <img src="images/icons/fb.png" alt="" class="socials__icon-fb">
                                 </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/google.png" alt="" class="socials__icon">
+                            <img src="images/icons/google.png" alt="" class="socials__icon-google">
                                </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/twitter.png" alt="" class="socials__icon">
+                            <img src="images/icons/twitter.png" alt="" class="socials__icon-twitter">
                                </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/mail.png" alt="" class="socials__icon">
+                            <img src="images/icons/mail.png" alt="" class="socials__icon-mail">
                                </a>
                         </li>
                     </ul>
