--- a/comments.html
+++ b/comments.html
@@ -237,13 +237,13 @@
                             </a>
                         </li>
                         <li class="sidebar__menu-item">
-                            <a href="comments.html" class="sidebar__menu-link">
+                            <span class="sidebar__menu-link">
                                 <div class="sidebar__icon sidebar__icon_star-black">
                                 </div>
                                 <span class="sidebar__menu-text sidebar__menu-text_balck">
                                 Отзывы
                             </span>
-                            </a>
+                            </span>
                         </li>
                     </ul>
                 </nav>
@@ -269,27 +269,28 @@
                     <ul class="socials__list">
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/vk.png" alt="" class="socials__icon">
+                            <img src="images/icons/vk.png" alt="" class="socials__icon-vk">
                                </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/fb.png" alt="" class="socials__icon">
-                                </a>
+                                <img src="images/icons/fb.png" alt="" class="socials__icon-fb">
+                            
+                            </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/google.png" alt="" class="socials__icon">
+                            <img src="images/icons/google.png" alt="" class="socials__icon-google">
                                </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/twitter.png" alt="" class="socials__icon">
+                            <img src="images/icons/twitter.png" alt="" class="socials__icon-twitter">
                                </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/mail.png" alt="" class="socials__icon">
+                            <img src="images/icons/mail.png" alt="" class="socials__icon-mail">
                                </a>
                         </li>
                     </ul>
