--- a/service.html
+++ b/service.html
@@ -146,11 +146,11 @@
                             </a>
                         </li>
                         <li class="sidebar__menu-item">
-                            <a href="service.html" class="sidebar__menu-link">
+                            <span class="sidebar__menu-link">
                                 <div class="sidebar__icon sidebar__icon_dumbbel">
                                 </div>
                                 <span class="sidebar__menu-text sidebar__menu-text_balck">Услуги</span>
-                            </a>
+                            </span>
                         </li>
                         <li class="sidebar__menu-item">
                             <a href="comments.html" class="sidebar__menu-link">
@@ -183,22 +183,22 @@
                     <ul class="socials__list">
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/vk.png" alt="" class="socials__icon">
+                            <img src="images/icons/vk.png" alt="" class="socials__icon-vk">
                                </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/fb.png" alt="" class="socials__icon">
+                            <img src="images/icons/fb.png" alt="" class="socials__icon-fb">
                                 </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/google.png" alt="" class="socials__icon">
+                            <img src="images/icons/google.png" alt="" class="socials__icon-google">
                                </a>
                         </li>
                         <li class="socials__item">
                             <a href="" class="socials__link">
-                            <img src="images/icons/twitter.png" alt="" class="socials__icon">
+                            <img src="images/icons/twitter.png" alt="" class="socials__icon-twitter">
                                </a>
                         </li>
                         <li class="socials__item">
